syntax = "proto3";

package node;
option go_package = "/proto";

service Node {
    rpc Propose (ProposeRequest) returns (ProposeResponse) {}
    rpc Stable (StableRequest) returns (StableResponse) {}
}

message Message {
    string id = 1;
    int64 timestamp = 2;
    string topic = 3;
    bytes body = 4;
}

message ProposeRequest {
    Message message = 1;
}

message ProposeResponse {
    bool ack = 1;
    Message message = 2;
    map<string,Message> predecessors = 3;
}

message StableRequest {
    Message message = 1;
    map<string,Message> predecessors = 2;
}

message StableResponse {
    bool ack = 1;
}